# FidelityFX-SDK

./: BuildFluidDX12.bat  CMakeLists.txt  readme.md
fluid/: CMakeLists.txt  fluiddebugrendermodule.cpp  fluiddebugrendermodule.h  fluidframework.cpp  fluidframework.h  fluidparticlesystem.cpp  fluidparticlesystem.h  fluidrendermodule.cpp  fluidrendermodule.h
fluid/config/: fluidconfig.json
fluid/shaders/: fluid.hlsli  sdf.hlsl  sdfdebug.hlsl  tiling.hlsl
framework/cauldron/application/: main.cpp
framework/cauldron/framework/inc/shaders/: shadercommon.h
framework/cauldron/framework/src/: CMakeLists.txt
framework/rendermodules/gbuffer/shaders/: gbufferps.hlsl
